# intro-project

./: .gitignore  Assignment.md  README.md  docker-compose.yml
audio-worker/: Dockerfile  baselines.json  worker.py
audio-worker/processor/: CMakeLists.txt  wav_processor.cpp
bonus/api/: main.py  requirements.txt
bonus/ui/: index.html
db/: init.sql
grafana/dashboards/: measurements.json
grafana/provisioning/datasources/: postgres.yml
recorder/: record.py  requirements.txt
